DFR-1074: Fix merge conflicts