@@ -3,13 +3,13 @@ package uk.gov.hmcts.reform.finrem.caseorchestration.handler.managebarrister;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.domain.EventType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.finrem.caseorchestration.handler.CallbackHandler;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.CaseType;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Barrister;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.BarristerData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.barristers.ManageBarristerService;
@@ -17,13 +17,14 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.service.barristers.ManageBar
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.MANAGE_BARRISTER_PARTY;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class ManageBarristerAboutToSubmitHandler implements CallbackHandler {
+public class ManageBarristerAboutToSubmitHandler implements CallbackHandler<Map<String, Object>> {
 
     private final ManageBarristerService manageBarristerService;
 
@@ -35,13 +36,13 @@ public class ManageBarristerAboutToSubmitHandler implements CallbackHandler {
     }
 
     @Override
-    public AboutToStartOrSubmitCallbackResponse handle(CallbackRequest callbackRequest, String userAuthorisation) {
+    public GenericAboutToStartOrSubmitCallbackResponse<Map<String, Object>> handle(CallbackRequest callbackRequest, String userAuthorisation) {
         CaseDetails caseDetails = callbackRequest.getCaseDetails();
         CaseDetails caseDetailsBefore = callbackRequest.getCaseDetailsBefore();
 
         List<Barrister> barristers = manageBarristerService
             .getBarristersForParty(caseDetails, userAuthorisation).stream()
-            .map(BarristerData::getBarrister).toList();
+            .map(BarristerData::getBarrister).collect(Collectors.toList());
 
         if (Optional.ofNullable(caseDetails.getData().get(MANAGE_BARRISTER_PARTY)).isPresent()) {
             caseDetailsBefore.getData().put(MANAGE_BARRISTER_PARTY, caseDetails.getData().get(MANAGE_BARRISTER_PARTY));
@@ -49,16 +50,16 @@ public class ManageBarristerAboutToSubmitHandler implements CallbackHandler {
 
         List<Barrister> barristersBeforeEvent = manageBarristerService
             .getBarristersForParty(caseDetailsBefore, userAuthorisation).stream()
-            .map(BarristerData::getBarrister).toList();
+            .map(BarristerData::getBarrister).collect(Collectors.toList());
 
-        log.info("Current barristers: {}", barristers.toString());
-        log.info("Original Barristers: {}", barristersBeforeEvent.toString());
+        log.info("Current barristers: {}", barristers);
+        log.info("Original Barristers: {}", barristersBeforeEvent);
 
         Map<String, Object> caseData = manageBarristerService.updateBarristerAccess(caseDetails,
             barristers,
             barristersBeforeEvent,
             userAuthorisation);
 
-        return AboutToStartOrSubmitCallbackResponse.builder().data(caseData).build();
+        return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData).build();
     }
 }
