@@ -6,12 +6,12 @@ import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.domain.EventType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.CaseType;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Barrister;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.BarristerData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Organisation;
@@ -21,6 +21,7 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.service.barristers.ManageBar
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -57,9 +58,9 @@ public class ManageBarristerAboutToSubmitHandlerTest {
     @Test
     public void givenHandlerCanHandleCallback_whenCanHandle_thenReturnTrue() {
         assertThat(manageBarristerAboutToSubmitHandler.canHandle(
-            CallbackType.ABOUT_TO_SUBMIT,
-            CaseType.CONTESTED,
-            EventType.MANAGE_BARRISTER),
+                CallbackType.ABOUT_TO_SUBMIT,
+                CaseType.CONTESTED,
+                EventType.MANAGE_BARRISTER),
             is(true));
     }
 
@@ -97,11 +98,12 @@ public class ManageBarristerAboutToSubmitHandlerTest {
             .thenReturn(barristerCollection);
         when(manageBarristerService.getBarristersForParty(callbackRequest.getCaseDetailsBefore(), AUTH_TOKEN))
             .thenReturn(barristerCollection);
-        List<Barrister> barristers = getBarristers().stream().map(BarristerData::getBarrister).toList();
+        List<Barrister> barristers = getBarristers().stream().map(BarristerData::getBarrister).collect(Collectors.toList());
         when(manageBarristerService.updateBarristerAccess(callbackRequest.getCaseDetails(),
             barristers, barristers, AUTH_TOKEN)).thenReturn(Map.of(REPRESENTATION_UPDATE_HISTORY, RepresentationUpdateHistory.builder().build()));
 
-        AboutToStartOrSubmitCallbackResponse response = manageBarristerAboutToSubmitHandler.handle(callbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<Map<String, Object>>
+            response = manageBarristerAboutToSubmitHandler.handle(callbackRequest, AUTH_TOKEN);
 
         verify(manageBarristerService).updateBarristerAccess(callbackRequest.getCaseDetails(), barristers, barristers, AUTH_TOKEN);
         assertTrue(response.getData().containsKey(REPRESENTATION_UPDATE_HISTORY));
